# simon

./: .gitignore  .krazy  .reviewboardrc  AUTHORS  BUGS.txt  CMakeLists.txt  CMakeLists_ssc.txt  COPYING.LIB  Changelog  Doxyfile  HTK_README.txt  INSTALL  Julius_LICENCE.txt  LICENCE.txt  Mainpage.dox  Makefile_old  Neu Textdokument.txt  README.txt  RtAudio.LICENCE  TODO.txt  Voxforge.LICENCE  action_icons.qrc  addwordintropage.cpp  addwordintropage.h  addwordrecordpage.cpp  addwordrecordpage.h  addwordresolvepage.cpp  addwordresolvepage.h  addwordview.cpp  addwordview.h  alsabackend.cpp  alsabackend.h  atobject.cpp  atsettings.cpp  atsettings.h  atwatcher.cpp  atwatcher.h  banners.qrc  bompdict.cpp  bompdict.h  (+344 more)
afaras/src/: CMakeLists.txt  Messages.sh  afaras.desktop  afarasui.rc  afarasview.cpp  afarasview.h  main.cpp  main.ui  org.kde.afaras.desktop
julius/: 00readme-ja.txt  00readme.txt  CMakeLists.txt  LICENSE.txt  Makefile.in  Release-ja.txt  Release.txt  Sample.jconf  configure  configure.in
julius/CVS/: Entries  Repository
julius/adinrec/: 00readme-ja.txt  00readme.txt  Makefile.in  Makefile.in.orig  adinrec.c
julius/adintool/: 00readme-ja.txt  00readme.txt  CMakeLists.txt  Makefile.in  adintool.c
julius/generate-ngram/: 00readme.txt  Makefile.in  Makefile.in.orig  generate-ngram.c
julius/gramtools/: Makefile.in  configure  configure.in
julius/jclient-perl/: Makefile.in
julius/jcontrol/: Makefile.in  configure  configure.in  japi.h  japi_grammar.c  japi_misc.c  japi_process.c  jcontrol.c  server.c
julius/julius/: 00readme-ja.txt  00readme.txt  CMakeLists.txt  Makefile  Makefile.in  Makefile.in.orig  app.h  charconv.c  charconv_iconv.c  charconv_libjcode.c  charconv_win32.c  config.cache  config.h  config.status  config_win32.h  configure  configure.in  main.c  module.c  output_file.c  output_module.c  output_stdout.c  recogloop.c  record.c  visual.c
julius/julius-simple/: CMakeLists.txt  Makefile  julius-simple.c
julius/libjulius/: CMakeLists.txt  Makefile  Makefile.in  config.cache  config.status  configure  configure.in  doxygen.conf.ver  libjulius-config  libjulius-config-dist
julius/libsent/: CMakeLists.txt  Makefile  Makefile.in  config.cache  config.status  configure  configure.in  libsent-config  libsent-config-dist  libsent-config-dist.in  libsent-config.in
julius/man/: Makefile.in  adintool.1  generate-ngram.1  generate.1  gram2sapixml.pl.1  julius.1  mkbingram.1  nextword.1
julius/mkbingram/: 00readme-ja.txt  00readme.txt  Makefile.in  Makefile.in.orig  mkbingram.c
julius/mkbinhmm/: CMakeLists.txt  Makefile.in  Makefile.in.orig  mkbinhmm.c  mkbinhmmlist.c
julius/mkgshmm/: Makefile.in  configure  configure.in  mkgshmm.in
julius/mkss/: Makefile.in  mkss.c
julius/plugin/: 00readme-ja.txt  00readme.txt  Makefile  adin_oss.c  audio_postprocess.c  calcmix.c  feature_postprocess.c  fvin.c  generic_callback.c  plugin_defs.h  result.c
julius/support/: build-all.sh
juliusd/: CMakeLists.txt  README_DATABASE  build.bat  julian.jconf  juliusd.kdevelop  juliusd.kdevses  juliusd.pro
juliusd/src/: databaseaccess.cpp  juliuscontrol.h  main.ui  newuser.ui  newuserdialog.cpp  newuserdialog.h  projectview.h  settings.cpp  settings.h  settings.ui  settingsview.cpp  settingsview.h  simonsocket.cpp  simonsocket.h  sync_factory.cpp  sync_factory.h  sync_filereader.cpp  sync_filereader.h  sync_filewriter.cpp  sync_filewriter.h  sync_merger.cpp  sync_merger.h  sync_networkconfiguration.cpp  sync_networkreader.cpp  sync_reader.h  sync_syncmanager.h  sync_writer.h  userdialog.cpp  users.ui
juliusd/templates/: h
juliusd_old/src/: CMakeLists.txt  databaseaccess.h  juliuscontrol.cpp  juliusd.cpp  juliusd.qrc  networkcontrol.cpp  networkcontrol.h  projectview.cpp  src.pro  sync_configuration.h  sync_fileconfiguration.h  sync_mergecontainer.h  sync_networkconfiguration.h  sync_networkreader.h  sync_networkwriter.cpp  sync_networkwriter.h  sync_reader.cpp  sync_syncmanager.cpp  sync_writer.cpp  trayiconmanager.cpp  trayiconmanager.h  userdialog.h
ksimond/config/: CMakeLists.txt  ksimondconfiguration.desktop  ksimondconfiguration.kcfg  ksimondconfiguration.kcfgc  ksimondconfiguration.ui  ksimondsettings.cpp  ksimondsettings.h
ksimond/src/: CMakeLists.txt  Messages.sh  ksimond.desktop  ksimond_autostart.desktop  ksimondview.cpp  ksimondview.h  main.cpp  org.kde.ksimond.desktop  org.kde.ksimond_autostart.desktop
plugins/Commands/: CMakeLists.txt
sam/src/: CMakeLists.txt  Messages.sh  accuracydisplay.cpp  accuracydisplay.h  carraydata.h  conservativetraining.cpp  conservativetraining.h  conservativetraining.ui  corpusinformation.cpp  corpusinformation.h  corpusinformation.ui  corpusinformationwidget.cpp  corpusinformationwidget.h  exporttestresults.cpp  exporttestresults.h  exporttestresultsdlg.ui  juliustestconfigurationwidget.cpp  juliustestconfigurationwidget.h  juliustestconfigurationwidget.ui  latexreporttemplateengine.cpp  latexreporttemplateengine.h  main.cpp  main.ui  org.kde.sam.desktop  qwt_bars_item.cpp  qwt_bars_item.h  reportparameters.cpp  reportparameters.h  reporttemplateengine.cpp  sam.desktop  (+21 more)
simon/: CMakeLists.txt  Doxyfile  Voxforge.LICENCE  build.bat  build.sh  org.kde.simon.appdata.xml  org.kde.simon.desktop  org.kde.simon_autostart.desktop  simon.desktop  simon.tag  simon_autostart.desktop
simond/: .krazy  CMakeLists.txt  default.jconf  simond.db
simonlib/: CMakeLists.txt  CMakeLists_ssc.txt  Messages.sh  settings-simon.desktop  settings-simond.desktop
simonoid/: .swp.simonoid2.cpp  CMakeLists.txt  Messages.sh  README  config.ui  plasma-applet-simonoid.desktop  plasma-applet-simonoid2.desktop  simonoid.cpp  simonoid.h  simonoid2.cpp  simonoid2.h
src/: .directory  CMakeLists.txt  action_icons.qrc  banners.qrc  category_icons.qrc  create_ts_files.sh  main.cpp  main.ui  other_icons.qrc  simon_en.ts  simon_tob.ts  simoncontrol.cpp  simoncontrol.h  simonui.rc  simonview.cpp  simonview.h  src.pro
ssc/: CMakeLists.txt  README
sscd/: CMakeLists.txt  mysql_create_script.sql  mysql_create_script_voxforge.sql  sscd.conf
(+3871 files in other folders)
