find_package(Portaudio)
if (PORTAUDIO_FOUND )
  add_definitions(-DUSE_PORTAUDIO -DUSE_MIC=1)
endif (PORTAUDIO_FOUND )
if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif(MSVC)

add_subdirectory(libsent)
add_subdirectory(libjulius)
add_subdirectory(julius)
add_subdirectory(julius-simple)
add_subdirectory(adintool)
add_subdirectory(mkbinhmm)
add_subdirectory(gramtools/dfa_minimize)
add_subdirectory(gramtools/mkdfa/mkfa-1.44-flex)
