add_definitions(-DUSE_WITH_SIMON)
set (USE_WITH_SIMON "1")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/eventsimulation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonactions)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simoncontextcoreui)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonddatabaseaccess)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simongraphemetophoneme)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simondstreamer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonjsonconnector)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonlogging)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simoninfo)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonxml)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonuicomponents)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonmodeltest)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonsound)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonwav)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonprotocol)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simontts)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sscobjects)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sscprotocol)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonrecognitionresult)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonrecognizer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/speechmodelcompilation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonprogresstracking)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simondialogengine)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simoncontextdetection)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simoncontextadapter)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sscdaccess)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonvision)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonscenariobase)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonscenarios)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/simonscenarioui)
