add_definitions(-DUSE_WITH_SIMON)
set (USE_WITH_SIMON "1")

add_subdirectory(eventsimulation)
add_subdirectory(simonactions)
add_subdirectory(simoncontextcoreui)
add_subdirectory(simonddatabaseaccess)
add_subdirectory(simongraphemetophoneme)
add_subdirectory(simondstreamer)
add_subdirectory(simonjsonconnector)
add_subdirectory(simonlogging)
add_subdirectory(simoninfo)
add_subdirectory(simonxml)
add_subdirectory(simonutils)
add_subdirectory(simonuicomponents)
add_subdirectory(simonmodeltest)
add_subdirectory(simonsound)
add_subdirectory(simonwav)
add_subdirectory(simonprotocol)
add_subdirectory(simontts)
add_subdirectory(sscobjects)
add_subdirectory(sscprotocol)
add_subdirectory(simonrecognitionresult)
add_subdirectory(simonrecognizer)
add_subdirectory(speechmodelcompilation)
add_subdirectory(simonprogresstracking)
add_subdirectory(simondialogengine)
add_subdirectory(simoncontextdetection)
add_subdirectory(simoncontextadapter)
add_subdirectory(sscdaccess)

add_subdirectory(simonscenariobase)
add_subdirectory(simonscenarios)
add_subdirectory(simonscenarioui)