dnl Copyright (c) 2002-2007 Kawahara Lab., Kyoto University
dnl Copyright (c) 2002-2005 Shikano Lab., Nara Institute of Science and Technology
dnl Copyright (c) 2005-2007 Julius project team, Nagoya Institute of Technology
dnl All rights reserved
AC_INIT(jcontrol.c)
AC_CANONICAL_HOST
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PATH_PROG(RM,rm)
AC_CHECK_FUNC(gethostbyname,,AC_CHECK_LIB(nsl,gethostbyname))
AC_CHECK_FUNC(connect,,AC_CHECK_LIB(socket, connect))
case "$host_os" in
mingw*)
	EXTRALIB="$EXTRALIB -lws2_32"
	;;
esac
AC_SUBST(EXTRALIB)
AC_OUTPUT(Makefile)
